# sy-lws-test

./: .gitmodules  CMakeLists.txt
apps/server/: CMakeLists.txt
ref/: CMakeLists.txt
ref/server/: CMakeLists.txt  main.c
ref/simple-server/: CMakeLists.txt  server.c
